--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			agentforce_messaging.settings.devMode = true;
 			agentforce_messaging.init(
 				'00DSB00000QAo9R',
-				'mychannel',
-				'https://orgfarm-0c5a291cea.test1.my.pc-rnd.site.com/ESWmychannel1754976598162',
+				'NGC_1',
+				'https://orgfarm-0c5a291cea.test1.my.pc-rnd.site.com/ESWNGC11746199002281',
 				{
 					scrt2URL: 'https://orgfarm-0c5a291cea.test1.my.pc-rnd.salesforce-scrt.com'
 				}
@@ -22,6 +22,6 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://orgfarm-0c5a291cea.test1.my.pc-rnd.site.com/ESWmychannel1754976598162/assets/js/init.js' onload='initEmbeddedMessaging()'></script></body>
+<script type='text/javascript' src='https://orgfarm-0c5a291cea.test1.my.pc-rnd.site.com/ESWNGC11746199002281/assets/js/init.js' onload='initEmbeddedMessaging()'></script></body>
 
 </html>
