--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
-
+<html>
+<head>
+<title>InApp</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+</head>
 <body>
+
+<h1> ASA Client</h1>
+<p><a id="editThisPageLink" target="_blank" style="color:blue">Edit this page</a></p>
+<script>document.getElementById('editThisPageLink').href = "https://github.com/ESW1234/esw1234.github.io/edit/master" + window.location.pathname;</script>
 <script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
-			agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-			agentforce_messaging.settings.devMode = true;
-			agentforce_messaging.init(
-				'00DSB00000QAo9R',
-				'NGC_1',
-				'https://orgfarm-0c5a291cea.test1.my.pc-rnd.site.com/ESWNGC11746199002281',
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+			embeddedservice_bootstrap.settings.devMode = true; 
+			embeddedservice_bootstrap.init(
+				'00DVR000001qWhZ',
+				'Nelly_Bot_Deployment',
+				'https://dvr000001qwhz2au.perf1v.my.pc-rnd.site.com/ESWNellyBotDeployment1722500139981',
 				{
-					scrt2URL: 'https://orgfarm-0c5a291cea.test1.my.pc-rnd.salesforce-scrt.com'
+					scrt2URL: 'https://dvr000001qwhz2au.perf1v.my.pc-rnd.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -22,6 +27,5 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://orgfarm-0c5a291cea.test1.my.pc-rnd.site.com/ESWNGC11746199002281/assets/js/init.js' onload='initEmbeddedMessaging()'></script></body>
-
+<script type='text/javascript' src='https://dvr000001qwhz2au.perf1v.my.pc-rnd.site.com/ESWNellyBotDeployment1722500139981/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script></body>
 </html>
