--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 </head>
 <body>
-
-<h1> ASA Client</h1>
-<p><a id="editThisPageLink" target="_blank" style="color:blue">Edit this page</a></p>
-<script>document.getElementById('editThisPageLink').href = "https://github.com/ESW1234/esw1234.github.io/edit/master" + window.location.pathname;</script>
-<script type='text/javascript'>
+  <script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
-			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-			embeddedservice_bootstrap.settings.devMode = true; 
-			embeddedservice_bootstrap.init(
-				'00DVR000001qWhZ',
-				'Nelly_Bot_Deployment',
-				'https://dvr000001qwhz2au.perf1v.my.pc-rnd.site.com/ESWNellyBotDeployment1722500139981',
+			agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+            // agentforce_messaging.settings.devMode = true;
+			agentforce_messaging.init(
+				'00DLT000009KAvh',
+				'CWC_ASA',
+				'https://orgfarm-adf2a4b7b0.test1.my.pc-rnd.site.com/ESWCWCASA1758018345373',
 				{
-					scrt2URL: 'https://dvr000001qwhz2au.perf1v.my.pc-rnd.salesforce-scrt.com'
+					scrt2URL: 'https://orgfarm-adf2a4b7b0.test1.my.pc-rnd.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -27,5 +23,6 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://dvr000001qwhz2au.perf1v.my.pc-rnd.site.com/ESWNellyBotDeployment1722500139981/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script></body>
+<script type='text/javascript' src='https://orgfarm-adf2a4b7b0.test1.my.pc-rnd.site.com/ESWCWCASA1758018345373/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
+</body>
 </html>
